--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "minibreak"
+name = "ot3"
 version = "0.1.0"
 edition = "2021"
 
@@ -18,7 +18,7 @@ nb = "1.1.0"
 riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
 riscv-rt = "0.11.0"
 num-traits = { version = "0.2.17", default-features = false }
-glam = { version = "0.24.2", default-features = false, features = ["libm", "fast-math"] }
+hilbert_2d = { path = "external/hilbert_2d" }
 
 [build-dependencies]
 # slint-build = "1.2.2"
