--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
 riscv-rt = "0.11.0"
 num-traits = { version = "0.2.17", default-features = false }
 glam = { version = "0.24.2", default-features = false, features = ["libm", "fast-math"] }
+cfg-if = "1.0.0"
 
 [build-dependencies]
 # slint-build = "1.2.2"
