--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [features]
 speed-debug = []
 
+[build-dependencies]
+litex-pac = { path = "external/openfpga-litex/lang/rust/crates/litex-pac", features = ["rt"] }
+
 [dependencies]
 embedded-alloc = "0.5.0"
 embedded-hal = "0.2.7"
